minor cart css bug on mobile fix

--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -12,7 +12,7 @@
   @media screen and (max-width: index.$sm-tablet-width) {
     position: fixed;
     width: 100vw;
-    bottom: -29rem;
+    top: 92%;
     left: 0%;
     box-shadow: 0px -10px 8px 0px rgba(0, 0, 0, 0.2);
 
@@ -22,6 +22,7 @@
     }
 
     &-active {
+      top: 0%;
       bottom: 0%;
     }
   }
@@ -47,6 +48,11 @@
 
     @media screen and (max-width: index.$sm-tablet-width) {
       margin: 0 5%;
+      overflow-y: scroll;
+    }
+
+    &::-webkit-scrollbar {
+      display: none;
     }
   }
   &-item {
